# TimeSignature

./: .gitignore  README.md  docker-compose.yml  railway.toml
backend/: Dockerfile  Dockerfile.dev  analyzer.py  main.py  pyproject.toml  requirements.txt  stream_handler.py
backend/tests/: test_analyze.py  test_mic_stream.py  test_stream.py
docs/: Dev-Plan.md  Execution-Plan.md  PRD-A.md  PRD-B.md  PRD-C.md  QUESTIONS.md  prd.json
frontend/: .env.example  Dockerfile.dev  package-lock.json  package.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: analyzeClient.ts  streamClient.ts
frontend/src/audio/: drumSamples.ts  drumSequencer.ts  metronome.ts
frontend/src/components/: BeatIndicator.tsx  BpmControl.tsx  DrumSection.tsx  ErrorBoundary.tsx  FileUpload.tsx  InputToggle.tsx  LoadingSkeleton.tsx  MetronomeControls.tsx  MicInput.tsx  TimeSignatureDisplay.tsx
frontend/src/data/: drumPatterns.ts
frontend/src/store/: appStore.ts
frontend/src/test/: BeatIndicator.test.tsx  BpmControl.test.tsx  DrumSection.test.tsx  FileUpload.test.tsx  InputToggle.test.tsx  TimeSignatureDisplay.test.tsx  analyzeClient.test.ts  appStore.test.ts  drumPatterns.test.ts  drumSamples.test.ts  metronome.test.ts
