[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timesignature-backend"
version = "0.1.0"
description = "TimeSignature detection API using BeatNet"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "python-multipart>=0.0.9",
    "librosa>=0.10.2",
    "numpy>=1.26.0",
    "soundfile>=0.12.1",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "mypy>=1.10.0",
]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
